@@ -8,7 +8,9 @@ Storybook for [KNH Core](../../framework/): every component and behaviour of the
 
 ## Stories
 
-Button · Checkbox · Slider · TextField · SelectableList · LazyColumn · Scroll · Tabs · SegmentedControl · ToggleButton · Surfaces (Panel, Card, Section, Dialog) · Text & tooltips · Theme · Layout · Modifiers · State & ViewModel · Navigation · HUD overlay · Stress: dense widgets · Stress: scroll & clip
+Button · Checkbox · Slider · TextField · SelectableList · LazyColumn · Scroll · Tabs · SegmentedControl · ToggleButton · Surfaces (Panel, Card, Section, Dialog) · Text & tooltips · Theme · Layout · Modifiers · State & ViewModel · Navigation · HUD overlay · Stress: dense widgets · Stress: scroll & clip · Vector API benchmark
+
+The Vector API benchmark compares scalar and explicit SIMD grayscale conversion on a background thread. To run it, add `--add-modules=jdk.incubator.vector` to the GTNH instance's Java arguments and restart. The story reports whether the module loaded, verifies matching output, and shows median timings. The scalar JIT may still auto-vectorize code, so timings compare implementations rather than proving which CPU instructions ran.
 
 ## Adding a story
 
